--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,11 @@ httpx>=0.24.0     # ← ADD THIS
 beautifulsoup4>=4.10.0  # For scraping
 rapidfuzz>=2.0.0  # For fuzzy string matching
 
+# ML utilities
+autogluon>=0.8.0  # For Python 3.12 support
+scikit-learn>=1.3.0  # Fallback ML
+lightgbm>=3.3.0  # Additional ML algorithm
+
 # Development dependencies
 pytest>=6.2.0
 pytest-asyncio>=0.15.0
